tests/grammar/schema/union/variable_fail/int/stderr.golden
error[E1001]: ImmutableError
 --> ${CWD}/main.k:4:1
  |
4 | a |= 20
  | ^ Immutable variable 'a' is modified during compiling
  |
 --> ${CWD}/main.k:3:1
  |
3 | a = 5
  | ^ The variable 'a' is declared here firstly
  |
note: change the variable name to '_a' to make it mutable